--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -89,7 +89,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install kubernetes pyyaml requests pylint
+        pip install kubernetes pyyaml requests jinja2 pylint
     - name: Lint kube-runtime
       run: |
         cd src/kube-runtime
